--- a/migrationToRoom/src/main/res/values/strings.xml
+++ b/migrationToRoom/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">migrationToRoom</string>
-    <string name="title_home">Home</string>
+    <string name="title_home">Application displays nothing. Check your logs for confirming weather migration was successful or not</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
 </resources>
